--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts/iconfont.css">
 </head>
 
 <body>
@@ -26,7 +27,26 @@
             </div>
         </div>
         <div class="footer">
-            <!--5.-->
+            <span>
+                <i class="iconfont icon-shouye"></i>
+                <em>首页</em>
+            </span>
+            <span>
+                <i class="iconfont icon-fenlei-xuanzhong"></i>
+                <em>微选</em>
+            </span>
+            <span>
+                <i class="iconfont icon-Instagram"></i>
+                <em>购物圈</em>
+            </span>
+            <span>
+                <i class="iconfont icon-zantinghuodong"></i>
+                <em>购物车</em>
+            </span>
+            <span>
+                <i class="iconfont icon-wode"></i>
+                <em>个人中心</em>
+            </span>
         </div>
     </div>
 
