--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
             <!-- 1.轮播+input-->
         </div>
         <div class="section">
-            <div>
-                <!--2.list列表-->
+            <div class='list-cmy'>
+                <li>
+                    <cty><img src="img/l1.png" alt=""></cty>
+                    <span>领惠券</span>
+                </li>
+                <li>
+                    <cty><img src="img/l2.png" alt=""></cty><span>优惠券</span></li>
+                <li>
+                    <cty><img src="img/l3.png" alt=""></cty><span>领惠券</span></li>
+                <li>
+                    <cty><img src="img/l4.png" alt=""></cty><span>领优券</span></li>
+                <li>
+                    <cty><img src="img/l5.png" alt=""></cty><span>领优券</span></li>
+                <li>
+                    <cty><img src="img/l6.png" alt=""></cty><span>领惠券</span></li>
+                <li>
+                    <cty><img src="img/l7.png" alt=""></cty><span>领优券</span></li>
+                <li>
+                    <cty><img src="img/l8.png" alt=""></cty><span>领优惠</span></li>
+                <li>
+                    <cty><img src="img/l9.png" alt=""></cty><span>领优券</span></li>
+                <li>
+                    <cty><img src="img/l0.png" alt=""></cty><span>领惠券</span></li>
             </div>
             <div>
                 <!--3.一张大图-->
