--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts2/iconfont.css">
+    <link rel="stylesheet" href="swiper-3.4.2.min.css">
 </head>
 
 <body>
     <div class="wrap">
         <div class="header">
-            <!-- 1.轮播+input-->
+            <div class="swiper-container one">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="img/1.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/2.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/4.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="img/8.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="ab">
+                <span><i class="icon iconfont icon-shouqi-01"></i></span>
+                <input type="text" placeholder="钓鱼竿">
+                <i class="icon iconfont icon-fangdajing f"></i>
+            </div>
         </div>
         <div class="section">
             <div>
@@ -31,5 +53,13 @@
     </div>
 
 </body>
+<script src='js/swiper-3.4.2.min.js'></script>
+<script src='js/jquery-2.1.1.min.js'></script>
+<script>
+    var mySwiper = new Swiper('.swiper-container', {
+        autoplay: 1000,
+        loop: true
+    })
+</script>
 
 </html>
